tests/expected_invalid_parse_grant_missing_binder.diag.out
<input>:8:27: error: expected permit binder name
        grant start_pass() as {
                              ^
